i am being an idiot